vlib/v/checker/tests/import_syntax_err.vv
import time, os
fn main() {
	println(time.now())
}
